force-app/main/default/objects/OrgApprovalProcess__c/OrgApprovalProcess__c.object-meta.xml
<CustomObject>
    <description>Approval process information retrieved from polling for search functionality</description>
    <label>OrgApprovalProcess</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgApprovalProcesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>