force-app/main/default/objects/OrgApprovalProcess__c/fields/ApprovalProcessCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProcessCreatedDate__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Date this ApprovalProcess was created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ApprovalProcessCreatedDate</label>
    <type>DateTime</type>
</CustomField>