force-app/main/default/objects/OrgApprovalProcess__c/fields/ApprovalProcessName__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProcessName__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Name of the ApprovalProcess</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ApprovalProcessName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>