force-app/main/default/objects/OrgApprovalProcess__c/fields/OrgInfo__c.field-meta.xml
<CustomField>
    <fullName>OrgInfo__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Key to tie this table to the ID field on the OrgInfo table</description>
    <label>OrgInfo</label>
    <referenceTo>OrgInfo__c</referenceTo>
    <relationshipLabel>OrgProcesses</relationshipLabel>
    <relationshipName>OrgProcesses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>